--- a/css/styles.css
+++ b/css/styles.css
@@ -69,13 +69,20 @@ h2 {
   text-decoration: none;
 }
 
+div#home_photos {
+  position: relative;
+  width: 100%;
+}
+
 #home_photo {
-  float: left;
+  display: inline-block;
+  margin-right: -4px;
+  vertical-align: top;
 }
 
 div#welcome {
   position: absolute;
-  width: 300px;
+  width: 400px;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
@@ -87,7 +94,10 @@ p#welcome {
   text-align: center;
   vertical-align: middle;
   font-family: "Lucida Handwriting";
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: white;
 }
 
 #paragraph {
