--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,18 @@ body {
 }
 
 h1 {
-  font-size: 18px;
+  font-size: 21px;
   font-style: italic;
   text-decoration: underline;
 }
 
 h2 {
-  font-size: 18px;
+  font-size: 21px;
+}
+
+h3 {
+  font-size: 16px;
+  text-decoration: underline;
 }
 
 .container {
@@ -19,22 +24,20 @@ h2 {
   margin: 0 auto;
 }
 
-#header {
+table#header {
   width: 100%;
   border-bottom: solid white;
   border-collapse: collapse;
 }
 
-#home_logo {
-  width: 157px;
+td#home_logo {
+  width: 159px;
   padding: 20px;
   background-color: #3a7137;
 }
 
-#navbar {
+td#navbar {
   width: 860px;
-  text-align: center;
-  vertical-align: middle;
   background-color: #dd2d32;
   font-size: 21px;
   font-weight: bold;
@@ -45,28 +48,64 @@ h2 {
   float: left;
 }
 
-.nav {
-  display: block;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
+.navbar {
+  overflow: hidden;
+  padding-left: 100px;
 }
 
-.nav li {
-  display: inline;
-}
-
-.nav a {
-  display: inline-block;
-  padding: 10px;
+.navbar a {
+  float: left;
   color: black;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
 }
 
-.nav a:hover {
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  border: none;
+  outline: none;
+  color: black;
+  padding: 14px 16px;
+  background-color: inherit;
+  margin: 0;
+  font-size: 21px;
+  font-weight: bold;
+}
+
+.navbar a:hover,
+.dropdown:hover .dropbtn {
   color: white;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
   text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 div#photos {
@@ -78,6 +117,14 @@ div#photos {
   display: inline-block;
   margin-right: -4px;
   vertical-align: top;
+}
+
+#menu_photo,
+#store_photo {
+  display: inline-block;
+  margin-right: -4px;
+  vertical-align: top;
+  padding: 10px;
 }
 
 div#welcome {
@@ -102,6 +149,32 @@ p#welcome {
 
 #paragraph {
   padding: 10px;
+}
+
+table#store {
+  border-spacing: 0 50px;
+  margin-top: -30px;
+}
+
+form {
+  display: block;
+  margin-top: 0em;
+}
+
+input.simple {
+  display: block;
+  margin: 10px;
+}
+
+textarea {
+  display: block;
+  height: 300px;
+  width: 600px;
+  margin: 10px;
+}
+
+select {
+  margin: 10px;
 }
 
 footer {
