--- a/css/styles.css
+++ b/css/styles.css
@@ -122,9 +122,6 @@ div#photos {
 #menu_photo,
 #store_photo {
   display: inline-block;
-  margin-right: -4px;
-  vertical-align: top;
-  padding: 10px;
 }
 
 div#welcome {
@@ -141,10 +138,11 @@ p#welcome {
   text-align: center;
   vertical-align: middle;
   font-family: "Lucida Handwriting";
-  font-size: 20px;
+  font-size: 21px;
   font-weight: bold;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  text-shadow: -1px 0 black, 0 3px black, 3px 0 black, 0 -1px black;
   color: white;
+  word-spacing: 3px;
 }
 
 #paragraph {
@@ -154,6 +152,10 @@ p#welcome {
 table#store {
   border-spacing: 0 50px;
   margin-top: -30px;
+}
+
+table#store td#price {
+  padding: 40px;
 }
 
 form {
